Fixed some few css bugs on mobile

--- a/src/base.css
+++ b/src/base.css
@@ -7,6 +7,10 @@
     @apply h-full antialiased font-body text-base text-accent bg-surface;
   }
 
+  model-viewer {
+    @apply h-full;
+  }
+
   model-viewer::part(default-progress-mask),
   model-viewer::part(default-progress-bar) {
     @apply hidden;
@@ -18,7 +22,7 @@
   }
 
   p > span {
-    @apply font-mono text-lg font-semibold bg-secondary/10 text-secondary/90 py-1 px-2 rounded;
+    @apply font-mono text-lg font-semibold bg-secondary/20 text-secondary py-1 px-2 rounded;
   }
 }
 
